home: Fix extra scrollbar appearing in Chrome
--HG--
branch : plugins

--- a/plugins/sparklinlabs/home/editors/main/index.styl
+++ b/plugins/sparklinlabs/home/editors/main/index.styl
@@ -14,6 +14,7 @@ body
 
   .chat
     flex 1
+    flex-basis 0
     overflow-y scroll
     padding 0.5em
     word-wrap break-word
